tests/baselines/reference/circularImportAlias.errors.txt
circularImportAlias.ts(5,30): error TS2449: Class 'C' used before its declaration.
circularImportAlias.ts(6,9): error TS2564: Property 'id' has no initializer and is not definitely assigned in the constructor.
circularImportAlias.ts(11,22): error TS2564: Property 'name' has no initializer and is not definitely assigned in the constructor.


==== circularImportAlias.ts (3 errors) ====
    // expected no error
    
    namespace B {
        export import a = A;
        export class D extends a.C {
                                 ~
!!! error TS2449: Class 'C' used before its declaration.
!!! related TS2728 circularImportAlias.ts:11:18: 'C' is declared here.
            id: number;
            ~~
!!! error TS2564: Property 'id' has no initializer and is not definitely assigned in the constructor.
        }
    }
    
    namespace A {
        export class C { name: string }
                         ~~~~
!!! error TS2564: Property 'name' has no initializer and is not definitely assigned in the constructor.
        export import b = B;
    }
    
    var c: { name: string };
    var c = new B.a.C();
    
    
    